objects/tffa__AssetValuation__c.object
<CustomObject>
    <description>Captures the valuation details of the asset.</description>
    <fields>
        <fullName>tffa__AgencyCode__c</fullName>
        <description>Code of the valuation agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AgencyName__c</fullName>
        <description>Name of the valuation agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <description>Reference to parent asset object</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Valuations</relationshipLabel>
        <relationshipName>Valuations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__EstimatedValue__c</fullName>
        <description>Estimated value of the asset</description>
        <label>Estimated value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InitialValue__c</fullName>
        <description>Initial value of the asset</description>
        <label>Initial value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MarketValue__c</fullName>
        <description>Market value of the asset</description>
        <label>Market value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Remarks__c</fullName>
        <description>Remarks captured by the valuation agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ValuationDate__c</fullName>
        <description>Date on which valuation was done</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Valuation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ValuationYear__c</fullName>
        <description>Captures valuation year</description>
        <label>Valuation year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Valuation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Valuation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Valuations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>